--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -79,6 +79,8 @@
     height: 100%;
     span{
         white-space: nowrap;
+        font-family: sans-serif;
+        text-transform: initial;
     }
 }
 .viewControls-button-disabled{
