--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -73,7 +73,7 @@ button {
 }
 
 .frontEndIndex-container button, .frontEndIndex-container label {
-  font-family: 'Times New Roman', Times, serif !important;
+  font-family: 'Times New Roman', Times, serif;
   text-transform: uppercase;
 }
 
@@ -514,6 +514,7 @@ label {
   z-index: 1;
   position: absolute;
   height: 100%;
+  width: 100%;
   max-height: 100%;
 }
 
@@ -670,20 +671,30 @@ label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   margin: 20px 0 10px 0;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
 
+.Tags-item_selectors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 .Tags-item_container {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace !important;
   border: 1px solid black;
-  padding: 2px 7px 2px 7px;
-  margin: 2px 3px;
+  padding: 2px 7px 2px 7px !important;
+  margin: 2px 3px !important;
   cursor: pointer;
+  text-transform: unset !important;
 }
 
 .Tags-item_container:hover {
@@ -695,6 +706,35 @@ label {
   font-size: 12px;
   font-weight: 600;
   white-space: nowrap;
+}
+
+.Tags-item_container-closeButton {
+  -webkit-transition: width 0.2s, white 0.2s;
+  transition: width 0.2s, white 0.2s;
+}
+
+.Tags-item_container-closeButton_closed {
+  width: 0;
+  overflow: hidden;
+}
+
+.Tags-item_container-closeButton_open {
+  width: 80px;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase !important;
+}
+
+.Tags-item_container-closeButton_open .Tags-item_text {
+  color: white;
+  font-weight: unset;
+}
+
+.Tags-item_container-closeButton_open button {
+  width: 100%;
+  background-color: red;
+  border: none;
+  border: 1px solid red;
 }
 
 .enlarge-preview {
@@ -1806,6 +1846,8 @@ label {
 
 .viewControls-button span {
   white-space: nowrap;
+  font-family: sans-serif;
+  text-transform: initial;
 }
 
 .viewControls-button-disabled {
