--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -11,7 +11,7 @@ button{
     background-color: white;
 }
 .frontEndIndex-container button,.frontEndIndex-container label{
-       font-family: 'Times New Roman', Times, serif !important;
+       font-family: 'Times New Roman', Times, serif;
        text-transform: uppercase;
 }
 body{
@@ -374,6 +374,7 @@ font-family: 'Times New Roman', Times, serif;
     z-index: 1;
     position: absolute;
     height: 100%;
+    width: 100%;
     max-height: 100%;
 }
 
@@ -469,18 +470,24 @@ font-family: 'Times New Roman', Times, serif;
 }
 .Tags-item_wrapper{
     display: flex;
-    flex-wrap: wrap;
     margin: 20px 0 10px 0;
     justify-content: flex-end;
     
 }
-.Tags-item_container{
-    font-family: 'Courier New', Courier, monospace;
-    border: 1px solid black;
-    padding: 2px 7px 2px 7px;
-    margin: 2px 3px;
-    cursor: pointer;
+.Tags-item_selectors{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
 }
+.Tags-item_container{
+    font-family: 'Courier New', Courier, monospace !important;
+    border: 1px solid black;
+    padding: 2px 7px 2px 7px !important;
+    margin: 2px 3px !important;
+    cursor: pointer;
+    text-transform: unset !important;
+}
+
 .Tags-item_container:hover{
     transform: scale(1.1);
 }
@@ -489,13 +496,29 @@ font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
     white-space: nowrap;
 }
-.full-height{
-    // height: 100% !important;
+.Tags-item_container-closeButton{
+    transition: width 0.2s, $background-color 0.2s;
 }
-// .show-menu-desktop{
-//     transform: translateX(-100%);
-//     width: 0;
-// }
+.Tags-item_container-closeButton_closed{
+    width: 0;
+    overflow: hidden;
+}
+.Tags-item_container-closeButton_open{
+    width: 80px;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase !important;
+    .Tags-item_text{
+        color: white;
+        font-weight: unset;
+    }
+    button{
+        width: 100%;
+        background-color: red;
+        border: none;
+        border: 1px solid red;
+    }
+}
 .enlarge-preview{
     height: 100%;
     width: 100%;
