--- a/client/src/css/components/_List.scss
+++ b/client/src/css/components/_List.scss
@@ -1,7 +1,5 @@
 $filtersWidth_desktop: 220px;
 .legacyStyle-List{
-    // display: flex;
-    // flex-wrap: wrap;
     max-width: 100%;
     margin: 0;
     margin: 5px;
@@ -9,31 +7,24 @@ $filtersWidth_desktop: 220px;
     border-bottom: 1px dotted black;
 }
 .FilterTree-container{
-    // position: absolute;
     grid-column-start: 1;
     grid-column-end: 2;
-    top: 30px;
     overflow-y: scroll;
     height: 100%;
-    width: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 14px;
     background-color: white;
     border-right: 1px solid black;
-
-    padding-bottom: 50px;
-
-    // transform: translateX(-100%);
-    // transition: width 0.2s;
+    width: 0;
 }
 .FilterTree-wrapper{
     width: $filtersWidth_desktop;
     height: 100%;
     padding-bottom: 50px;
+    padding-right: 20px;
 }
 
 .show-menu{
-    // transform: translateX(0);
     border-right: 1px solid black;
     width: $filtersWidth_desktop;
 }
@@ -54,7 +45,6 @@ $filtersWidth_desktop: 220px;
 
 
 .MobileNav-container{
-    // position: absolute;
     z-index: 1;
     height: 30px;
     width: 100%;
@@ -127,8 +117,5 @@ $filtersWidth_desktop: 220px;
     }
     .show-menu{
         width:$filtersWidth_mobile;
-        // transform: translateX(0);
-        // border-right: 1px solid black;
-        // width: 320px;
     }
 }
