--- a/client/src/css/components/_List.scss
+++ b/client/src/css/components/_List.scss
@@ -19,7 +19,7 @@ $filtersWidth_desktop: 220px;
 }
 .FilterTree-wrapper{
     width: $filtersWidth_desktop;
-    height: 100%;
+    max-height: 100%;
     padding-bottom: 50px;
     padding-right: 20px;
 }
@@ -112,10 +112,12 @@ $filtersWidth_desktop: 220px;
         padding: 6px;
         width: $filtersWidth_mobile;
     }
-    .Mobilenav-button:last-of-type{
-        border-right: none;
-    }
     .show-menu{
         width:$filtersWidth_mobile;
+    }
+}
+@media only screen and (max-width: 360px) {
+    .Mobilenav-button:last-of-type{
+        border-right: none;
     }
 }
