--- a/client/src/css/components/_switch.scss
+++ b/client/src/css/components/_switch.scss
@@ -6,6 +6,7 @@ $padding: 6px;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 4px !important;
+    margin-bottom: 50px !important;
 }
 .switch {
     position: relative;
