--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -271,7 +271,7 @@ font-family: 'Times New Roman', Times, serif;
 .imageSelect-buffer{
     height: 100%;
     width: 100%;
-    background-color: white;
+    background-color: red;
 }
 .Nav-button{
     width: 4vw;
