--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -504,10 +504,11 @@ font-family: 'Times New Roman', Times, serif;
     overflow: hidden;
 }
 .Tags-item_container-closeButton_open{
-    width: 80px;
+    min-width: 60px;
     color: white;
     font-weight: bold;
     text-transform: uppercase !important;
+    margin-left: 6px;
     .Tags-item_text{
         color: white;
         font-weight: unset;
@@ -516,7 +517,9 @@ font-family: 'Times New Roman', Times, serif;
         width: 100%;
         background-color: red;
         border: none;
-        border: 1px solid red;
+        padding: 0 !important;
+        margin: 0 !important;
+        border: 0;
     }
 }
 .enlarge-preview{
@@ -628,7 +631,7 @@ font-family: 'Times New Roman', Times, serif;
     overflow: hidden;
 }
 .SeeAlso-wrapper{
-    max-width: 50%;
+    max-width: 100%;
 }
 .SeeAlso-related{
     margin-right: 3px;
@@ -641,6 +644,7 @@ font-family: 'Times New Roman', Times, serif;
 }
 .SeeAlso-related_images{
     display: flex;
+    justify-content: flex-end;
     max-height: 90px;
     overflow-x: auto;  
     overflow-y: hidden;
@@ -648,8 +652,9 @@ font-family: 'Times New Roman', Times, serif;
 .subtitle_seeAlso{
     margin-bottom: 3px;
     border-bottom: 1px solid;
-    opacity: 0.5;
     white-space: nowrap;
+    text-align: end;
+    font-size: 14px;
 }
 .ArtworkInfo--descriptions{
     margin: 1vw 0;
@@ -1023,6 +1028,9 @@ font-family: 'Times New Roman', Times, serif;
     .ArtworkInfo-preview-container{
         height: 60px;
     }
+    .SeeAlso-related{
+        margin: 0;
+    }
     .SeeAlso-related_images{
         max-height: 70px;
     }
@@ -1170,7 +1178,6 @@ font-family: 'Times New Roman', Times, serif;
         overflow-y: hidden;
         border-top: 0;
         bottom: unset;
-        border-top: 1px solid black;
         left: 0;
         *{
             border: 0;
@@ -1199,15 +1206,13 @@ font-family: 'Times New Roman', Times, serif;
         display: initial;
         height: 100%;
         overflow: hidden;
-        padding: 0 3vw 0 3vw;
+        padding: 0;
     }
-    .ArtworkInfo-toggleTags{
-        transform: translateY(-60px);
-    }
+    // .ArtworkInfo-toggleTags{
+    //     transform: translateY(-60px);
+    // }
     .enlarge-scroll-down{
-        // transform: translateY(0px);
         transform: translateY(100%);
-        // top: 0;
     }
     .scroll-down{
         top: 0;
@@ -1293,9 +1298,6 @@ font-family: 'Times New Roman', Times, serif;
         height: 100% !important;
         min-width: 0 !important;
     }
-    // .side-scroll img{
-    //     height: 90px;
-    // }
     .side-scroll .FilePreview--imageContainer{
         width: initial;
         left: initial;
@@ -1316,7 +1318,31 @@ font-family: 'Times New Roman', Times, serif;
     .pinch-to-zoom-container{
         display: inline-block !important;
     }
+    .ArtworkInfo-container_seealso{
+        padding: 0 20px 0 50px;
+    }
+    .Tags-item_wrapper{
+        padding: 0 20px;
+        margin-top: 2px;
+    }
+    .ArtworkInfo-container .imageSelect-container{
+        height: 0;
+    }
+    .ArtworkInfo-toggleTags{
+        border-top: 1px solid black;
+        height: 60px !important;
+    }
+    .ArtworkInfo-toggleTags{
+        margin-top: 6px;
+    }
+    
+    .Tags-item_container{
+        margin: 3px 0 0 6px !important;
+        padding: 2px 5px 2px 5px !important;
+    }
   }
+
+  //retcon
   .previewCounter{
       justify-content: start;
       width: 50px;
@@ -1367,9 +1393,9 @@ font-family: 'Times New Roman', Times, serif;
     .enlarge-closeButton-container{
         position: initial;
     }
-    .imageSelect-container.side-scroll{
-        position: absolute;
-    }
+    // .imageSelect-container.side-scroll{
+    //     position: absolute;
+    // }
     .enlargeContainer{
         height: 100% !important;
         grid-template-rows: min-content 1fr min-content;
