--- a/client/src/css/components/_List.scss
+++ b/client/src/css/components/_List.scss
@@ -21,7 +21,8 @@ $filtersWidth_desktop: 220px;
     width: $filtersWidth_desktop;
     max-height: 100%;
     padding-bottom: 50px;
-    padding-right: 20px;
+    padding-right: 24px;
+    padding-left: 6px;
 }
 
 .show-menu{
