--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -709,8 +709,8 @@ label {
 }
 
 .Tags-item_container-closeButton {
-  -webkit-transition: width 0.2s, white 0.2s;
-  transition: width 0.2s, white 0.2s;
+  -webkit-transition: width 0.2s;
+  transition: width 0.2s;
   width: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1981,7 +1981,8 @@ label {
   width: 220px;
   max-height: 100%;
   padding-bottom: 50px;
-  padding-right: 20px;
+  padding-right: 24px;
+  padding-left: 6px;
 }
 
 .show-menu {
@@ -2146,27 +2147,26 @@ label {
 }
 
 .button_legacy-style_disable {
-  border-top: 4px solid #bbbbbb;
-  border-right: 4px solid #494949;
-  border-bottom: 4px solid #494949;
-  border-left: 4px solid #bbbbbb;
-  background-color: #a0a0a0;
-  color: lime;
+  border-top: 3px solid #bbbbbb;
+  border-right: 3px solid #494949;
+  border-bottom: 3px solid #494949;
+  border-left: 3px solid #bbbbbb;
+  font-size: 14px;
+  color: black;
+  background-color: whitesmoke;
 }
 
 .button_legacy-style_enable {
-  background-color: gray;
-  color: #494949;
-  border-top: 4px solid #494949;
-  border-right: 4px solid #bbbbbb;
-  border-bottom: 4px solid #bbbbbb;
-  border-left: 4px solid #494949;
+  font-size: 14px;
+  background-color: #aaaaaa;
+  color: gray;
+  border-top: 3px solid #494949;
+  border-right: 3px solid #bbbbbb;
+  border-bottom: 3px solid #bbbbbb;
+  border-left: 3px solid #494949;
 }
 
 .switch-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
@@ -2178,16 +2178,17 @@ label {
 .switch {
   position: relative;
   display: inline-block;
-  width: 80px;
+  width: 180px;
   height: 26px;
+  margin-top: 10px;
 }
 
 .switch::before {
   content: "on";
   position: absolute;
-  top: 20px;
+  top: 14px;
   font-size: 12px;
-  right: 12px;
+  right: 6px;
   color: #444444;
   text-transform: uppercase;
   font-weight: 600;
@@ -2196,9 +2197,9 @@ label {
 .switch::after {
   content: "off";
   position: absolute;
-  top: 20px;
+  top: 14px;
   font-size: 12px;
-  left: 6px;
+  left: 0;
   color: #444444;
   text-transform: uppercase;
   font-weight: 600;
@@ -2219,7 +2220,8 @@ label {
   left: 0;
   right: 6px;
   bottom: 6px;
-  background-color: #757575;
+  background-color: black;
+  height: 2px;
 }
 
 .slider:before {
@@ -2227,17 +2229,18 @@ label {
   content: "";
   height: 14px;
   width: 14px;
+  bottom: -6px;
   left: 3px;
-  bottom: 3px;
-  background-color: #900b0b;
+  background-color: red;
+  border: 1px solid;
   -webkit-transition: .2s;
   transition: .2s;
 }
 
 input:checked + .slider:before {
   background-color: lime;
-  -webkit-transform: translateX(54px);
-          transform: translateX(54px);
+  -webkit-transform: translateX(152px);
+          transform: translateX(152px);
 }
 
 /* Rounded sliders */
