--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1975,6 +1975,7 @@ label {
   background-color: white;
   border-right: 1px solid black;
   width: 0;
+  padding-top: 20px;
 }
 
 .FilterTree-wrapper {
@@ -2104,6 +2105,7 @@ label {
 
 @media only screen and (max-width: 720px) {
   .FilterTree-container {
+    padding-top: 0;
     font-size: 16px;
     border-right: 1px solid black;
   }
@@ -2250,6 +2252,38 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.combineFilters-form {
+  display: block;
+}
+
+.combineFilters-title {
+  font-weight: bold;
+}
+
+.combineFilters-label {
+  margin-right: 10px;
+  cursor: pointer;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  font-size: 12px;
+}
+
+.combineFilters-inputContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 3px;
+  border: 1px solid black;
+  padding: 3px;
 }
 
 .enlargeContainer {
