--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -668,9 +668,11 @@ label {
 }
 
 .Tags-item_wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr min-content;
+      grid-template-columns: 1fr -webkit-min-content;
+      grid-template-columns: 1fr min-content;
   margin: 20px 0 10px 0;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
