--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -761,21 +761,31 @@ label {
 }
 
 .familyPicker {
-  position: relative;
-  margin-top: 6px;
+  height: 100%;
+  overflow-y: auto;
+  width: 200px;
   border: 2px solid #b5b5b5;
   padding: 3px;
   border-radius: 6px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: min-content 1fr min-content;
+      grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
+      grid-template-rows: min-content 1fr min-content;
+}
+
+.familyPicker_closed {
+  width: 50px;
 }
 
 .familyPicker-reload {
   border: 0;
-  position: absolute;
   top: 3px;
   right: 3px;
   z-index: 2;
   text-transform: uppercase;
   font-weight: bold;
+  margin-top: 5px !important;
 }
 
 .themeSelector {
@@ -861,12 +871,27 @@ label {
 }
 
 .grid-wrapper {
-  padding: 6px 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(200px, auto))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(200px, auto));
-  grid-gap: 4px;
+  -ms-grid-columns: (minmax(min-content, 200px))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(-webkit-min-content, 200px));
+      grid-template-columns: repeat(auto-fill, minmax(min-content, 200px));
+  -ms-grid-rows: (minmax(min-content, 150px))[auto-fill];
+      grid-template-rows: repeat(auto-fill, minmax(-webkit-min-content, 150px));
+      grid-template-rows: repeat(auto-fill, minmax(min-content, 150px));
+  width: 100%;
+  overflow-y: auto;
+}
+
+.grid-wrapper_filters {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(min-content, 200px))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(-webkit-min-content, 200px));
+      grid-template-columns: repeat(auto-fill, minmax(min-content, 200px));
+  -ms-grid-rows: (minmax(min-content, 150px))[auto-fill];
+      grid-template-rows: repeat(auto-fill, minmax(-webkit-min-content, 150px));
+      grid-template-rows: repeat(auto-fill, minmax(min-content, 150px));
   width: 100%;
   overflow-y: auto;
 }
@@ -876,9 +901,11 @@ label {
   overflow-y: auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: minmax(min-content, 50px) minmax(300px, min-content);
-      grid-template-rows: minmax(-webkit-min-content, 50px) minmax(300px, -webkit-min-content);
-      grid-template-rows: minmax(min-content, 50px) minmax(300px, min-content);
+  -ms-grid-rows: 100%;
+      grid-template-rows: 100%;
+  -ms-grid-columns: min-content 1fr;
+      grid-template-columns: -webkit-min-content 1fr;
+      grid-template-columns: min-content 1fr;
 }
 
 .EditDetailContainer .themeSelector {
@@ -908,6 +935,14 @@ label {
 .EditDetailContainer .accordion .card .collapse {
   min-height: 0;
   overflow-y: auto;
+}
+
+.artworkOnDisplay-images {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: min-content 1fr;
+      grid-template-rows: -webkit-min-content 1fr;
+      grid-template-rows: min-content 1fr;
 }
 
 .create-createFamily {
@@ -954,7 +989,7 @@ label {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  padding: 0 !important;
+  padding: 3px;
 }
 
 .admin-nav-list li {
@@ -1164,7 +1199,6 @@ textarea {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 4px;
-  width: 200px;
   margin: 4px;
   border: 1px solid #888888;
   max-height: 300px;
@@ -1797,8 +1831,8 @@ h5 {
     border-right: 2px solid black;
   }
   .grid-wrapper {
-    -ms-grid-columns: (minmax(100px, 49%))[auto-fill];
-        grid-template-columns: repeat(auto-fill, minmax(100px, 49%));
+    -ms-grid-columns: (minmax(125px, 49%))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(125px, 49%));
     grid-gap: 4px;
     width: unset;
   }
